<resources>
    <string name="app_name">HHMarket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HHMarket</string>
    <string name="nav_header_subtitle">github.com/hungngo78</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sign_in">SIGN IN</string>
    <string name="menu_home">Home</string>
    <string name="menu_shopping_cart">Shopping_cart</string>
    <string name="menu_purchased_history">Purchased History</string>
    <string name="menu_user_profile">Profile</string>
    <string name="menu_change_password">Change Password</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">SIGN OUT</string>

    <string name="loading_categories">Loading categories...</string>
    <string name="cd_categories_list">Categories list</string>
    <string name="loading_products">Loading products...</string>
    <string name="cd_product_list">Product list</string>

    <string name="setting_notification">Notification</string>
    <!-- Notification Preferences for all -->
    <string name="setting_notification_all">Set notification for all</string>
    <!-- Notification for new product Preferences -->
    <string name="setting_notification_new_product">New product</string>

    <string name="setting_notification_new_product_on">Automatically receive notification about new product</string>
    <string name="setting_notification_new_product_off">Do not recieve any notification about new product </string>
    <string name="setting_notification_shipping">Shipping status</string>
    <string name="setting_notification_shipping_summary">Notify me about shipping status</string>

    <string name="about_version_info">Version 1.0.0</string>
    <string name="about_terms">Terms of Use</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reviews">Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_terms_content">The Intellectual Property disclosure will inform users that the contents, logo and other visual media you created is your property and is protected by copyright laws.
A Termination clause will inform that users’ accounts on your website and mobile app or users’ access to your website and mobile (if users can’t have an account with you) can be terminated in case of abuses or at your sole discretion.
A Governing Law will inform users which laws govern the agreement. This should the country in which your company is headquartered or the country from which you operate your website and mobile app.
A Links To Other Web Sites clause will inform users that you are not responsible for any third party websites that you link to. This kind of clause will generally inform users that they are responsible for reading and agreeing (or disagreeing) with the Terms and Conditions or Privacy Policies of these third parties.
If your website or mobile app allows users to create content and make that content public to other users, a Content section will inform users that they own the rights to the content they have created. The “Content” clause usually mentions that users must give you (the website or mobile app developer) a license so that you can share this content on your website/mobile app and to make it available to other users.

Because the content created by users is public to other users, a DMCA notice clause (or Copyright Infringement ) section is helpful to inform users and copyright authors that, if any content is found to be a copyright infringement, you will respond to any DMCA takedown notices received and you will take down the content. </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_title">Sign out</string>
    <string name="logout_message">Do you want to signout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="title_dialog_color">Select color</string>
    <string name="title_dialog_size">Select size</string>
    <string name="see_review">See review</string>
    <string name="add_to_cart">Add to cart</string>


    <!-- REVIEW -->
    <string name="cd_review_list">Review list</string>
    <string name="write_a_review">WRITE A REVIEW</string>
    <string name="how_you_rate">How would you rate this?</string>
    <string name="nick_name">Nickname</string>
    <string name="review_title">Review title</string>
    <string name="write_your_review">Write your review</string>
    <string name="write_your_name">Write your name</string>
    <string name="submit_review">SUBMIT REVIEW</string>
    <string name="exit_app">Press one more time to exit app</string>
    <string name="delete">Delete</string>
    <string name="add_cart_successfull">Added item to cart!</string>
    <string name="request_login">You need to login first!</string>
    <string name="order">Order</string>
    <string name="order_successful">You ordered successfull!</string>
    <string name="order_fail">Order is failed. Please try again!</string>
    <string name="delete_successfull">Delete successfull!</string>
    <string name="delete_fail">Delete is failed. Please try again!</string>


    <!-- Search -->
    <string name="search_hint">Search products</string>
</resources>
