<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/ic_menu_sign_in"
            android:title="@string/menu_sign_in" />
    </group>

    <item android:title="Shopping">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_shopping_cart"
                android:icon="@drawable/ic_menu_shopping_cart"
                android:title="@string/menu_shopping_cart" />
            <item
                android:id="@+id/nav_purchased_history"
                android:icon="@drawable/ic_menu_purchased_history"
                android:title="@string/menu_purchased_history" />
        </menu>
    </item>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_menu_user_profile"
                android:title="@string/menu_user_profile" />
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_menu_change_password"
                android:title="@string/menu_change_password" />
        </menu>
    </item>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>
</menu>
