<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean" />
        <variable
            name="shoppingCartAdaper"
            type="com.hhmarket.mobile.ui.adapter.ShoppingCartAdapter" />
        <variable
            name="total_price"
            type="float" />
        <variable
            name="total_amount"
            type="int" />
        <variable
            name="clickListenerOrder"
            type="com.hhmarket.mobile.model.ClickListener"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background">

            <TextView
                android:id="@+id/loading_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_categories"
                android:textAlignment="center"
                app:visibleGone="@{isLoading}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shopping_cart_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:contentDescription="@string/cd_categories_list"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/totalInfo"
                app:visibleGone="@{!isLoading}"
                tools:context=".ui.activity.MainActivity"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/shopping_cart_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/totalInfo"
                app:visibleGone="@{!isLoading}"
                app:layout_constraintTop_toBottomOf="@+id/shopping_cart_list"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@{`Total: $` + total_price}"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/total_amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@{`Quantity: ` + total_amount}"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:id="@+id/delete"
                    android:onClick="@{() -> clickListenerOrder.onClick(shoppingCartAdaper)}"
                    app:layout_constraintTop_toBottomOf="@+id/total_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>